signal/deployment.patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-bridge-base
  labels:
    app.kubernetes.io/name: mautrix-signal
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mautrix-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mautrix-signal
    spec:
      serviceAccountName: mautrix-signal-bridge
      containers:
        - name: mautrix-bridge
          image: "dock.mau.dev/mautrix/signal:v0.7.1"
          command:
            - python3
            - -m
            - mautrix_signal
            - -c
            - /data/config.yaml
          volumeMounts:
            - name: data
              mountPath: /data
            - name: outgoing-attachments
              mountPath: /data/tmp/outgoing_attachment_dir
            - name: signald
              mountPath: /signald
        - name: signald
          image: "signald/signald:0.23.2"
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: outgoing-attachments
              mountPath: /data/tmp/outgoing_attachment_dir
            - name: signald
              mountPath: /signald
          resources:
            {}
      volumes:
        - name: config
          configMap:
            name: mautrix-signal-bridge
        - name: secret
          secret:
            secretName: mautrix-signal-bridge
        - name: data
          emptyDir: {}
        - name: outgoing-attachments
          emptyDir: {}
        - name: signald
          persistentVolumeClaim:
            claimName: mautrix-signal-bridge
