signal/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-signal-bridge
  labels:
    app.kubernetes.io/name: mautrix-signal
    app.kubernetes.io/instance: matrix-signal
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app.kubernetes.io/name: mautrix-signal
      app.kubernetes.io/instance: matrix-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mautrix-signal
        app.kubernetes.io/instance: matrix-signal
    spec:
      serviceAccountName: mautrix-signal-bridge
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: mautrix-signal
          securityContext:
            {}
          image: "dock.mau.dev/mautrix/signal:v0.2.1"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
            - name: signald
              mountPath: /signald
          resources:
            {}
        - name: signald
          securityContext:
            {}
          image: "signald/signald:0.15.0-43-cd821ab5"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
            - name: signald
              mountPath: /signald
          resources:
            {}
      volumes:
        - name: config
          secret:
            secretName: mautrix-signal-bridge
        - name: data
          emptyDir: {}
        - name: signald
          persistentVolumeClaim:
            claimName: mautrix-signal-bridge
